package eu.telecomnancy.flashcard;

public interface Observateurs {
    public void update();
}
